--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -120,10 +120,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <p class="mb-5" style="text-align: left">
-                                    1. Обеспечивает рациональную организацию труда среднего и младшего медицинского персонала, повышение их квалификации.<br>
-                                    2. Осуществляет своевременную выписку, распределение и хранение перевязочных материалов, медикаментов и др., в том числе ядовитых и наркотических средств, ведет учет их расходования.<br>
-                                    3. Контролирует: работу среднего и младшего медицинского персонала по приему и выписке больных; транспортировку больных внутри отделений больницы; выполнение средним медицинским персоналом врачебных
-                                    назначений; санитарно-гигиеническое содержание отделений больницы, одежды и белья больных; своевременность и качество дезинфекции помещений, где находились инфекционные больные.<br>
+                                    {{ dolPol }}
                                 </p>
                             </div>
                         </div>
