feat(command): промежуточный комит

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -120,7 +120,13 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <p class="mb-5" style="text-align: left">
-                                    {{ dolPol }}
+                                    {% for i in dolPol %}
+                                        {{ i.item.name }}<br>
+                                    {% endfor %}
+                                    1. Обеспечивает рациональную организацию труда среднего и младшего медицинского персонала, повышение их квалификации.<br>
+                                    2. Осуществляет своевременную выписку, распределение и хранение перевязочных материалов, медикаментов и др., в том числе ядовитых и наркотических средств, ведет учет их расходования.<br>
+                                    3. Контролирует: работу среднего и младшего медицинского персонала по приему и выписке больных; транспортировку больных внутри отделений больницы; выполнение средним медицинским персоналом врачебных
+                                    назначений; санитарно-гигиеническое содержание отделений больницы, одежды и белья больных; своевременность и качество дезинфекции помещений, где находились инфекционные больные.<br>
                                 </p>
                             </div>
                         </div>
