--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -7,11 +7,28 @@
     <!-- Переопределенные шрифты бутстрапа-->
     <link rel="stylesheet" href="{{ asset('css/heading.css') }}">
     <link rel="stylesheet" href="{{ asset('css/body.css') }}">
+    <style>
+        #dropdownAcc {
+            background: none;
+            color: #4e5f68;
+            text-align: left;
+            font-weight: 700;
+        }
+        #dropdownAcc:active, #dropdownAcc:focus {
+            border: none;
+            background: none;
+            outline: none;
+            color: #135d82;
+            background: #fff;
+            border-radius: 0px !important;
+        }
+
+    </style>
 {% endblock %}
 {% block title %}Hello IndexController!{% endblock %}
 
 {% block body %}
-    <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-xl bg-secondary fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <img alt="Brand" src="{{ asset('img/logo.png') }}" height="45px"> Quick Dive</a>
@@ -33,6 +50,18 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
                                                          href="#addition">ДОПОЛНИТЕЛЬНЫЯ ИНФОРМАЦИЯ</a>
                     </li>
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <li class="nav-item mx-0 mx-lg-1 dropdown">
+                            <button class="w-100 nav-link py-3 px-0 px-lg-3 rounded border-0" id="dropdownAcc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i><span class="ml-3 d-xl-none">АККАУНТ</span></button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownAcc">
+                                <a class="dropdown-item" href="{{ path('logout') }}">Выйти</a>
+                            </div>
+                        </li>
+                    {% else %}
+                            <li class="nav-item mx-0 mx-lg-1">
+                                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{ path('login') }}" ><i class="fa fa-user"></i><span class="ml-3 d-xl-none">ВОЙТИ</span></a>
+                            </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
