--- a/templates/spec.html.twig
+++ b/templates/spec.html.twig
@@ -40,6 +40,7 @@
     <header class="masthead bg-primary text-white text-center background" style="background-image: url({{ asset('img/rosback8.jpg') }})">
         <div class="container d-flex align-items-center flex-column backtext">
             <h1 class="masthead-heading mb-0">{{ post.name }}</h1>
+            <p class="pre-wrap masthead-subheading font-weight-light mb-0">Полный текст должностной инструкции</p>
             <!-- Icon Divider-->
             {#<div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
