--- a/templates/spec.html.twig
+++ b/templates/spec.html.twig
@@ -14,6 +14,7 @@
             text-align: left;
             font-weight: 700;
         }
+
         #dropdownAcc:active, #dropdownAcc:focus {
             border: none;
             background: none;
@@ -31,7 +32,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="{{ path('home') }}">
-            <img alt="Brand" src="{{ asset('img/logo.png') }}" height="45px"> Quick Dive</a>
+                <img alt="Brand" src="{{ asset('img/logo.png') }}" height="45px"> Quick Dive</a>
             <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded"
                     type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Меню <i
@@ -48,11 +49,13 @@
                                                          href="#liability">ОТВЕТСТВЕННОСТЬ</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                                                         href="{{ path('archive_index')}}">{% apply upper %}База полных инструкций{% endapply %}</a>
+                                                         href="{{ path('archive_index') }}">{% apply upper %}База полных инструкций{% endapply %}</a>
                     </li>
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <li class="nav-item mx-0 mx-lg-1 dropdown">
-                            <button class="w-100 nav-link py-3 px-0 px-lg-3 rounded border-0" id="dropdownAcc" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i><span class="ml-3 d-xl-none">АККАУНТ</span></button>
+                            <button class="w-100 nav-link py-3 px-0 px-lg-3 rounded border-0" id="dropdownAcc"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
+                                        class="fa fa-user"></i><span class="ml-3 d-xl-none">АККАУНТ</span></button>
                             <div class="dropdown-menu" aria-labelledby="dropdownAcc">
                                 <a class="dropdown-item" href="{{ path('home') }}">Моя инструкция</a>
                                 <a class="dropdown-item" href="{{ path('logout') }}">Выйти</a>
@@ -60,38 +63,46 @@
                         </li>
                     {% else %}
                         <li class="nav-item mx-0 mx-lg-1">
-                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{ path('login') }}" ><i class="fa fa-user"></i><span class="ml-3 d-xl-none">ВОЙТИ</span></a>
+                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                               href="{{ path('login') }}"><i class="fa fa-user"></i><span
+                                        class="ml-3 d-xl-none">ВОЙТИ</span></a>
                         </li>
                     {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead bg-primary text-white text-center background" style="background-image: url({{ asset('img/rosback8.jpg') }})">
+    <header class="masthead bg-primary text-white text-center background"
+            style="background-image: url({{ asset('img/rosback8.jpg') }})">
         <div class="container d-flex align-items-center flex-column backtext">
-            <h1 class="masthead-heading mb-0">{{ post.name }}</h1>
+            <div class="row">
+                <h1 class="masthead-heading mb-0">{{ post.name }}</h1>
+            </div>
             <!-- Icon Divider-->
             {#<div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
             </div>#}
             <!-- Masthead Subheading-->
-{#            <p class="pre-wrap masthead-subheading font-weight-light mb-0">Отдел разработки и внедрения информационных систем</p>#}
+            {#            <p class="pre-wrap masthead-subheading font-weight-light mb-0">Отдел разработки и внедрения информационных систем</p>#}
         </div>
     </header>
-
     <section class="page-section" id="im">
         <div class="container">
             <div class="row justify-content-center">
                 <!-- Portfolio Items-->
                 <div class="col-md-12 col-lg-12 mb-12 professional-description">
-                    <h2 class="text-secondary mb-0  text-center">Должностные обязанности<hr></h2>
+                    <h2 class="text-secondary mb-0  text-center">Должностные обязанности
+                        <span data-toggle="modal" data-target="#modalDesctiptionLaw"
+                              class="moreButton" style="float: right; margin-top: -10px;">Краткое содержание</span>
+                        <hr>
+                    </h2>
                     {% for t in obyaz %}
                         <p>{{ t }}</p>
                     {% endfor %}
                 </div>
-                {#<div class="col-md-4 col-lg-4 mb-4 d-flex align-items-center">
-                    <div><img src="{{ asset('img/professional.jpg') }}" class="work-process"></div>
-                </div>#}
+                {#                <div class="col-md-4 col-lg-4 mb-4 d-flex align-items-center">#}
+                {#                    <div><img src="{{ asset('img/professional.jpg') }}" class="work-process"></div>#}
+                {#                </div>#}
             </div>
         </div>
     </section>
@@ -101,7 +112,11 @@
             <div class="row justify-content-center">
 
                 <div class="col-md-12 col-lg-12 mb-12 professional-description">
-                    <h2 class="text-secondary mb-0 text-center">Права<hr></h2>
+                    <h2 class="text-secondary mb-0 text-center">Права
+                        <span data-toggle="modal" data-target="#modalDesctiptionLaw1"
+                              class="moreButton" style="float: right; margin-top: -10px;">Краткое содержание</span>
+                        <hr>
+                    </h2>
                     {% for t in prava %}
                         <p>{{ t }}</p>
                     {% endfor %}
@@ -117,7 +132,11 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-12 mb-12 professional-description">
-                    <h2 class="text-secondary mb-0 text-center">Ответственность<hr></h2>
+                    <h2 class="text-secondary mb-0 text-center">Ответственность
+                        <span data-toggle="modal" data-target="#modalDesctiptionLaw1"
+                              class="moreButton" style="float: right; margin-top: -10px;">Краткое содержание</span>
+                        <hr>
+                    </h2>
                     {% for t in otvet %}
                         <p>{{ t }}</p>
                     {% endfor %}
@@ -128,6 +147,135 @@
             </div>
         </div>
     </section>
+
+    <div class="portfolio-modal modal fade" id="modalDesctiptionLaw" tabindex="-1" role="dialog"
+         aria-labelledby="#modalDesctiptionLawLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i
+                                class="fas fa-times"></i></span></button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-12">
+                                <h2 class="portfolio-modal-title text-secondary mb-0">Должностные обязанности</h2>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <p class="mb-5 more-modal-text" style="text-align: left">
+                                    Получает по нарядам, заявкам и другим документам товарно-материальные ценности
+                                    (сырье, материалы, оборудование, комплектующие изделия, инвентарь, канцелярские
+                                    принадлежности и т.п.). оформляет документацию на получаемые и отправляемые грузы,
+                                    заказывает контейнеры и транспортные средства для их доставки.
+
+                                    В соответствии с устраненным порядком выполняет работу по закупке
+                                    товарно-материальных ценностей.
+
+                                    Отправляет грузы в адрес предприятий или сопровождает их в пути следования,
+                                    обеспечивает сохранность и сопровождает их в пути следования, обеспечивает
+                                    сохранность и содействует своевременной их доставке.
+
+                                    Следит за соблюдением требований охраны труда при проведении погрузочно-разгрузочных
+                                    работ.
+
+                                    Принимает меры по повышению эффективности использования материальных ресурсов,
+                                    снижению затрат, связанных с их приобретением, доставкой и хранением.
+                                    <br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="modalDesctiptionLaw1" tabindex="-1" role="dialog"
+         aria-labelledby="#modalDesctiptionLawLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i
+                                class="fas fa-times"></i></span></button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-12">
+                                <h2 class="portfolio-modal-title text-secondary mb-0">Права</h2>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <p class="mb-5 more-modal-text" style="text-align: left">
+                                    Получает по нарядам, заявкам и другим документам товарно-материальные ценности
+                                    (сырье, материалы, оборудование, комплектующие изделия, инвентарь, канцелярские
+                                    принадлежности и т.п.). оформляет документацию на получаемые и отправляемые грузы,
+                                    заказывает контейнеры и транспортные средства для их доставки.
+
+                                    В соответствии с устраненным порядком выполняет работу по закупке
+                                    товарно-материальных ценностей.
+
+                                    Отправляет грузы в адрес предприятий или сопровождает их в пути следования,
+                                    обеспечивает сохранность и сопровождает их в пути следования, обеспечивает
+                                    сохранность и содействует своевременной их доставке.
+
+                                    Следит за соблюдением требований охраны труда при проведении погрузочно-разгрузочных
+                                    работ.
+
+                                    Принимает меры по повышению эффективности использования материальных ресурсов,
+                                    снижению затрат, связанных с их приобретением, доставкой и хранением.
+                                    <br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="modalDesctiptionLaw2" tabindex="-1" role="dialog"
+         aria-labelledby="#modalDesctiptionLawLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i
+                                class="fas fa-times"></i></span></button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-12">
+                                <h2 class="portfolio-modal-title text-secondary mb-0">Ответственность</h2>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <p class="mb-5 more-modal-text" style="text-align: left">
+                                    Получает по нарядам, заявкам и другим документам товарно-материальные ценности
+                                    (сырье, материалы, оборудование, комплектующие изделия, инвентарь, канцелярские
+                                    принадлежности и т.п.). оформляет документацию на получаемые и отправляемые грузы,
+                                    заказывает контейнеры и транспортные средства для их доставки.
+
+                                    В соответствии с устраненным порядком выполняет работу по закупке
+                                    товарно-материальных ценностей.
+
+                                    Отправляет грузы в адрес предприятий или сопровождает их в пути следования,
+                                    обеспечивает сохранность и сопровождает их в пути следования, обеспечивает
+                                    сохранность и содействует своевременной их доставке.
+
+                                    Следит за соблюдением требований охраны труда при проведении погрузочно-разгрузочных
+                                    работ.
+
+                                    Принимает меры по повышению эффективности использования материальных ресурсов,
+                                    снижению затрат, связанных с их приобретением, доставкой и хранением.
+                                    <br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer class="footer text-center">
         <div class="container">
@@ -140,12 +288,14 @@
                 </div>
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="mb-4"><a style="color: #fff; text-decoration: none" href="{{ path('archive_index') }}">БАЗА ПОЛНЫХ ИНСТРУКЦИЙ</a></h4>
+                    <h4 class="mb-4"><a style="color: #fff; text-decoration: none" href="{{ path('archive_index') }}">БАЗА
+                            ПОЛНЫХ ИНСТРУКЦИЙ</a></h4>
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
                     <h4 class="mb-4">О ПРОДУКТЕ</h4>
-                    <p class="pre-wrap lead mb-0">Интеллектуальная система для автоматической генерации одностраничных инструкций</p>
+                    <p class="pre-wrap lead mb-0">Интеллектуальная система для автоматической генерации одностраничных
+                        инструкций</p>
                 </div>
             </div>
         </div>
