feat(command): Выводит с БД краткие данные

--- a/templates/spec.html.twig
+++ b/templates/spec.html.twig
@@ -133,7 +133,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-12 mb-12 professional-description">
                     <h2 class="text-secondary mb-0 text-center">Ответственность
-                        <span data-toggle="modal" data-target="#modalDesctiptionLaw1"
+                        <span data-toggle="modal" data-target="#modalDesctiptionLaw3"
                               class="moreButton" style="float: right; margin-top: -10px;">Краткое содержание</span>
                         <hr>
                     </h2>
@@ -164,23 +164,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <p class="mb-5 more-modal-text" style="text-align: left">
-                                    Получает по нарядам, заявкам и другим документам товарно-материальные ценности
-                                    (сырье, материалы, оборудование, комплектующие изделия, инвентарь, канцелярские
-                                    принадлежности и т.п.). оформляет документацию на получаемые и отправляемые грузы,
-                                    заказывает контейнеры и транспортные средства для их доставки.
-
-                                    В соответствии с устраненным порядком выполняет работу по закупке
-                                    товарно-материальных ценностей.
-
-                                    Отправляет грузы в адрес предприятий или сопровождает их в пути следования,
-                                    обеспечивает сохранность и сопровождает их в пути следования, обеспечивает
-                                    сохранность и содействует своевременной их доставке.
-
-                                    Следит за соблюдением требований охраны труда при проведении погрузочно-разгрузочных
-                                    работ.
-
-                                    Принимает меры по повышению эффективности использования материальных ресурсов,
-                                    снижению затрат, связанных с их приобретением, доставкой и хранением.
+                                    {{ obyazKor }}
                                     <br>
                                 </p>
                             </div>
@@ -207,23 +191,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <p class="mb-5 more-modal-text" style="text-align: left">
-                                    Получает по нарядам, заявкам и другим документам товарно-материальные ценности
-                                    (сырье, материалы, оборудование, комплектующие изделия, инвентарь, канцелярские
-                                    принадлежности и т.п.). оформляет документацию на получаемые и отправляемые грузы,
-                                    заказывает контейнеры и транспортные средства для их доставки.
-
-                                    В соответствии с устраненным порядком выполняет работу по закупке
-                                    товарно-материальных ценностей.
-
-                                    Отправляет грузы в адрес предприятий или сопровождает их в пути следования,
-                                    обеспечивает сохранность и сопровождает их в пути следования, обеспечивает
-                                    сохранность и содействует своевременной их доставке.
-
-                                    Следит за соблюдением требований охраны труда при проведении погрузочно-разгрузочных
-                                    работ.
-
-                                    Принимает меры по повышению эффективности использования материальных ресурсов,
-                                    снижению затрат, связанных с их приобретением, доставкой и хранением.
+                                    {{ pravaKor }}
                                     <br>
                                 </p>
                             </div>
@@ -234,7 +202,7 @@
         </div>
     </div>
 
-    <div class="portfolio-modal modal fade" id="modalDesctiptionLaw2" tabindex="-1" role="dialog"
+    <div class="portfolio-modal modal fade" id="modalDesctiptionLaw3" tabindex="-1" role="dialog"
          aria-labelledby="#modalDesctiptionLawLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -250,23 +218,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <p class="mb-5 more-modal-text" style="text-align: left">
-                                    Получает по нарядам, заявкам и другим документам товарно-материальные ценности
-                                    (сырье, материалы, оборудование, комплектующие изделия, инвентарь, канцелярские
-                                    принадлежности и т.п.). оформляет документацию на получаемые и отправляемые грузы,
-                                    заказывает контейнеры и транспортные средства для их доставки.
-
-                                    В соответствии с устраненным порядком выполняет работу по закупке
-                                    товарно-материальных ценностей.
-
-                                    Отправляет грузы в адрес предприятий или сопровождает их в пути следования,
-                                    обеспечивает сохранность и сопровождает их в пути следования, обеспечивает
-                                    сохранность и содействует своевременной их доставке.
-
-                                    Следит за соблюдением требований охраны труда при проведении погрузочно-разгрузочных
-                                    работ.
-
-                                    Принимает меры по повышению эффективности использования материальных ресурсов,
-                                    снижению затрат, связанных с их приобретением, доставкой и хранением.
+                                    {{ otvetKor }}
                                     <br>
                                 </p>
                             </div>
